Fix padding/margin issues on small screens

--- a/style.css
+++ b/style.css
@@ -87,6 +87,13 @@ img {
     margin: 0px 2%;
   }
 
+  .content {
+    left: 50%;
+    top: 50%;
+    padding: 0.5em;
+    font-size: large;
+  }
+
   .row {
     overflow: scroll;
   }
